--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ set (CMAKE_CXX_STANDARD 11)
 
 project (node-lxc)
 include_directories(${CMAKE_JS_INC})
-file(GLOB SOURCE_FILES "src/node-lxc.h")
+file(GLOB SOURCE_FILES "src/node-lxc.cc" "src/lxc-bindings.cc")
 add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${CMAKE_JS_SRC})
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
 target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB})
@@ -13,10 +13,21 @@ target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB})
 execute_process(COMMAND node -p "require('node-addon-api').include"
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
         OUTPUT_VARIABLE NODE_ADDON_API_DIR
-        )
+)
 string(REGEX REPLACE "[\r\n\"]" "" NODE_ADDON_API_DIR ${NODE_ADDON_API_DIR})
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${NODE_ADDON_API_DIR})
 
 # define NAPI_VERSION
 add_definitions(-DNAPI_VERSION=3)
+
+# Add the directory containing lxc/lxccontainer.h to the include directories
+find_path(LXC_INCLUDE_DIR NAMES lxc/lxccontainer.h)
+include_directories(${LXC_INCLUDE_DIR})
+
+# Find the LXC library
+find_library(LXC_LIBRARY NAMES lxc)
+
+# Link the executable with the LXC library
+target_link_libraries(${PROJECT_NAME} ${LXC_LIBRARY})
+
