--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "lxc",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "preinstall": "npm install -g node-gyp",
-    "dev": "ts-node tests/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node-gyp configure && node-gyp build && tsc --build && mkdir -p dist/build &&  mv build/Release/node-unix.node dist/build"
+  "main": "lib/binding.ts",
+  "private": true,
+  "dependencies": {
+    "node-addon-api": "^1.1.0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.9.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "cmake-js": "^7.1.1"
   },
-  "dependencies": {
-    "node-addon-api": "^7.0.0",
-    "bindings": "^1.5.0"
-  }
+  "scripts": {
+    "install": "cmake-js compile",
+    "test": "ts-node test/test_binding.ts"
+  },
+  "gypfile": true,
+  "name": "hello-world",
+  "version": "1.0.0",
+  "description": "A first project.",
+  "author": "Your name goes here",
+  "license": "ISC"
 }
