--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "scripts": {
     "install": "cmake-js compile",
     "test": "ts-node test/test_binding.ts",
+    "test/attach": "ts-node test/attach/index.ts",
+    "test/list": "ts-node test/list/index.ts",
+    "test/list_keys": "ts-node test/list_keys/index.ts",
+    "test/start": "ts-node test/start/index.ts",
     "start": "node index.js",
     "rebuild:dev": "node-gyp rebuild --debug",
     "build:dev": "node-gyp build --debug",
