update: tests/create (NOT WORKING: return false on create())

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "scripts": {
     "install": "cmake-js compile",
-    "test": "ts-node test/test_binding.ts",
-    "test/attach": "ts-node test/attach/index.ts",
-    "test/list": "ts-node test/list/index.ts",
-    "test/list_keys": "ts-node test/list_keys/index.ts",
-    "test/start": "ts-node test/start/index.ts",
+    "tests": "ts-node tests/test_binding.ts",
+    "tests/attach": "ts-node tests/attach/index.ts",
+    "tests/list": "ts-node tests/list/index.ts",
+    "tests/list_keys": "ts-node tests/list_keys/index.ts",
+    "tests/start": "ts-node tests/start/index.ts",
+    "tests/create": "ts-node tests/create/index.ts",
     "start": "node index.js",
     "rebuild:dev": "node-gyp rebuild --debug",
     "build:dev": "node-gyp build --debug",
