--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "test": "ts-node tests/index.ts",
     "rebuild:dev": "node-gyp rebuild --debug",
     "build:dev": "node-gyp build --debug",
-    "clean": "node-gyp clean",
+    "build": "node-gyp build",
+    "clean": "node-gyp clean && npm run configure && npm run build",
     "configure": "node-gyp configure",
-    "test/ts": "npm run install && npm run test"
+    "test/ts": "npm run build && npm run test"
   },
   "gypfile": true
 }
