--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   "scripts": {
     "install": "cmake-js compile",
     "test": "ts-node tests/index.ts",
+    "test:build": "npm run build && npm run test",
     "rebuild:dev": "npx tsc && node-gyp rebuild --debug",
     "build:dev": "node-gyp build --debug",
     "build": "node-gyp build",
     "clean": "node-gyp clean && npm run configure && npm run build",
     "wipe": "node-gyp clean && npm run configure",
-    "configure": "node-gyp configure",
-    "test/ts": "npm run build && npm run test"
+    "configure": "node-gyp configure"
   },
   "gypfile": true
 }
