--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,12 @@
 cmake_minimum_required(VERSION 3.9)
 cmake_policy(SET CMP0042 NEW)
-set (CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 11)
 
-project (node-lxc)
+project(node-lxc)
 include_directories(${CMAKE_JS_INC})
 file(GLOB SOURCE_FILES "src/node-lxc.cpp" "src/Container.cpp")
-add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${CMAKE_JS_SRC}
-        src/Container.h
-)
+add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${CMAKE_JS_SRC})
+
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
 target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB})
 
@@ -20,8 +19,6 @@ string(REGEX REPLACE "[\r\n\"]" "" NODE_ADDON_API_DIR ${NODE_ADDON_API_DIR})
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${NODE_ADDON_API_DIR})
 
-# define NAPI_VERSION
-add_definitions(-DNAPI_VERSION=9)
 
 # Add the directory containing lxc/lxccontainer.h to the include directories
 find_path(LXC_INCLUDE_DIR NAMES lxc/lxccontainer.h)
@@ -33,3 +30,5 @@ find_library(LXC_LIBRARY NAMES lxc)
 # Link the executable with the LXC library
 target_link_libraries(${PROJECT_NAME} ${LXC_LIBRARY})
 
+# define NAPI_VERSION
+add_definitions(-DNAPI_VERSION=9)
