--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,16 +19,19 @@ string(REGEX REPLACE "[\r\n\"]" "" NODE_ADDON_API_DIR ${NODE_ADDON_API_DIR})
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${NODE_ADDON_API_DIR})
 
-
-# Add the directory containing lxc/lxccontainer.h to the include directories
-find_path(LXC_INCLUDE_DIR NAMES lxc/lxccontainer.h)
-include_directories(${LXC_INCLUDE_DIR})
-
-# Find the LXC library
-find_library(LXC_LIBRARY NAMES lxc)
-
-# Link the executable with the LXC library
-target_link_libraries(${PROJECT_NAME} ${LXC_LIBRARY})
-
 # define NAPI_VERSION
 add_definitions(-DNAPI_VERSION=9)
+
+
+## Add the directory containing lxc/lxccontainer.h to the include directories
+#find_path(LXC_INCLUDE_DIR NAMES lxc/lxccontainer.h)
+#include_directories(${LXC_INCLUDE_DIR})
+
+# Find the LXC library
+#find_library(LXC_LIBRARY NAMES lxc)
+#
+## Link the executable with the LXC library
+#target_link_libraries(${PROJECT_NAME} ${LXC_LIBRARY})
+#
+## define NAPI_VERSION
+#add_definitions(-DNAPI_VERSION=9)
