--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "index.ts",
   "private": true,
   "dependencies": {
-    "node-addon-api": "^1.1.0"
+    "node-addon-api": "^7.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.9.2",
@@ -26,6 +26,9 @@
     "clean": "node-gyp clean && npm run configure && npm run build",
     "wipe": "node-gyp clean && npm run configure",
     "configure": "node-gyp configure"
+  },
+  "engines": {
+    "node": "~10 >=10.20 || >=12.17"
   },
   "gypfile": true
 }
