--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "main": "index.ts",
   "private": true,
   "dependencies": {
-    "mocha": "^10.3.0",
     "node-addon-api": "^7.1.0"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.9.2",
     "cmake-js": "^7.1.1",
+    "mocha": "^10.3.0",
     "node-gyp": "^10.0.1",
     "ts-node": "^10.9.1"
   },
