--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-lxc",
+  "name": "@projectsource/node-lxc",
   "version": "1.0.0",
   "description": "NodeJS LXC bindings",
   "author": "Alexander Slaa",
